# sepl

./: CMakeLists.txt  Grammer.ebnf  LICENSE  README.md  sepl.h  sepl_com.h
examples/: CMakeLists.txt  README.md  basic.sepl  basic_embed.c  conditional.sepl  function.sepl  globals.sepl  input.sepl  loop.sepl  sepl_run.c
scripts/: combiner.c
sepl/: CMakeLists.txt  com.c  com.h  def.h  env.h  err.h  lex.c  lex.h  mod.c  mod.h  val.c  val.h
tests/: CMakeLists.txt  conditional.c  config.c  errors.c  functions.c  lexer.c  loops.c  module.c  op.c  string.c  tests.h  values.c  var.c
